# A13_Agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  dependencies.py  main.py
backend/app/agents/: orchestrator.py  state.py
backend/app/api/: router.py
backend/app/core/: catalog.py  config.py  logging.py  trend_catalog.py
backend/app/etl/: build_knowledge_base.py  import_to_neo4j.py  ingest_rag_corpus.py
backend/app/infra/: json_utils.py
backend/app/prompts/: templates.py
backend/app/repositories/: file_knowledge.py  in_memory_knowledge.py  knowledge_repository.py  neo4j_knowledge.py  rag_store.py
backend/app/schemas/: common.py  graph.py  job.py  planning.py  rag.py  resume.py  student.py
backend/app/services/: follow_up_question.py  industry_trend.py  job_profiler.py  matching.py  path_planner.py  rag_chunker.py  rag_embedding.py  rag_evaluator.py  rag_evidence_service.py  rag_graph_bridge.py  rag_retrieval.py  report_builder.py  resume_parser.py  resume_structurer.py  (+2 more)
career_planning_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/knowledge_base/: build_report.json  job_graph.json  job_profiles.json
docs/: resume-structuring-design.md  source-code-design.md
neo4j/: init.cypher  query_examples.cypher
tests/: conftest.py  test_health.py  test_neo4j_repository.py  test_path_planner_dynamic.py  test_personalized_subgraph.py  test_rag_integration.py  test_rag_retrieval.py  test_resume_structuring.py  test_stage3_smoke.py  test_stage4_smoke.py  test_student_profiler_context.py
(+11 files in other folders)
