[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "career-planning-agent"
version = "0.1.0"
description = "Evidence-driven career planning agent backend."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=1.10,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "xlrd>=2.0,<3.0",
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.setuptools]
packages = [
  "backend",
  "backend.app",
  "backend.app.agents",
  "backend.app.api",
  "backend.app.api.routes",
  "backend.app.core",
  "backend.app.etl",
  "backend.app.infra",
  "backend.app.infra.llm",
  "backend.app.prompts",
  "backend.app.repositories",
  "backend.app.schemas",
  "backend.app.services"
]
